{{$NEXT}}

0.20   2011-04-19

- The KQueue watcher checks that a file has a file descriptor to avoid
  watching closed files. Patch by Adreas Voegele.


0.19   2010-10-17

- The all.t test didn't run any tests at all if neither the Inotify nor KQueue
  watchers could be loaded. This was treated as a failure by test
  harnesses. Now we always test the Default class.


0.18   2010-10-15

- Always make a Default watcher object if we cannot load an OS-specific class.

- Add Test::Exception as a test prereq.


0.17   2010-10-04

- Loading File::ChangeNotify always loads the Default watcher class. This will
  give a useful error message if this module's prereqs are not loaded.


0.16   2010-07-12

- Changes to avoid a warning about a useless coercion from future versions of
  Moose.


0.15   2010-07-09

- Add a missing prereq, namespace::autoclean.


0.14   2010-07-08

- Running the tests left behind a lot of temp directories that should have
  been cleaned up, but weren't. Reported by Peter Edwards. RT #59125.

- License is now Artistic 2.0


0.13   2010-03-28

- Circular symlinks would cause instantiating a watcher to die with an error
  from File::Find. These are now ignored. Reported by Jon Schutz. RT #55883.

- Fixed misspelling of IO::KQueue in auto features. Reported by Jens
  Rehsack. RT #54905.


0.12   2010-01-28

- Added auto_features to the Build.PL, which will give hints on what modules
  to install for KQueue and Inotify support.

- Require Linux::Inotify 1.2+, since 1.1 apparently doesn't work with this
  module. Reported by Michael Grondin. RT #54069.


0.11   2009-12-07

- A test attempted to use Test::Without::Module but this wasn't in the prereq
  list. I've made the test check for the module and skip its tests if the
  module isn't present. Reported by Leon Brocard. RT #52539.


0.10   2009-12-06

- Attempting to instantiate more than one watcher failed if you were on a
  system where one of the watcher subclasses could not be loaded (which is