@@ -1,5 +1,11 @@
 {{$NEXT}}
 
+- The implementation of the exclude feature did not work properly in several
+  cases. First, for the Inotify and KQueue watchers, when a new directory was
+  created that should have been excluded, it was not. Second, it didn't work
+  for files at all for these watchers. Reported by Jon Swartz. RT #73089.
+
+
 0.20   2011-04-19
 
 - The KQueue watcher checks that a file has a file descriptor to avoid
